Fixes up some of the home layout issues

--- a/wp-content/themes/lobban/src/sass/_home.scss
+++ b/wp-content/themes/lobban/src/sass/_home.scss
@@ -1,9 +1,13 @@
-.home__info__wrapper {
-	display: flex;
-	flex-direction: column;
+body.home {
+	background: $themePrimaryColor;
+	color: $whiteish;
+	@media (min-width: $mediumWidth) {
+		display: flex;
+		flex-direction: row;
+	    }
 	}
 
-.home__wrapper a {
+.home a {
 	border-color: $whiteish;
 	color: $whiteish;
 	&:hover, &:active, &:focus {
@@ -11,19 +15,8 @@
     	}
 	}
 
-.home__wrapper {
-	@media (min-height: $minHeight) {
-	    display: flex;
-		flex-direction: column;
-	    }
-	@media (min-width: $mediumWidth) {
-		flex-direction: row;
-	    }
-	}
-
 .home__info,
-.home__nav {
-	color: $whiteish;
+.home nav {
 	padding: $spaceBase*2;
 	@media (min-width: $standardWidth) {
 	    padding: ($spaceBase*2 + .1rem);
@@ -31,27 +24,19 @@
 	}
 
 .home__info {
-	background: #FF654B;
 	display: flex;
 	justify-content: center;
 	margin-top: 0;
-	@media (min-height: $minHeight) {
-		align-items: center;
-		display: flex;
-	    height: 75vh;
-	    padding-bottom: 0;
-	    padding-top: $spaceBase;
-	    justify-content: center;
-	    }
 	@media (min-width: $mediumWidth) {
+		align-items: center;
 		display: flex;
 		height: 100vh;
 		justify-content: center;
-		padding-left: ($spaceBase*5 + .2rem);
+		padding-left: ($spaceBase*5 + .1rem);
 		width: 50vw;
 	    }
 	@media (min-width: $largeWidth) {
-		padding-left: ($spaceBase*7 + .4rem);
+		padding-left: ($spaceBase*7 + .1rem);
 	    }
 	}
 
@@ -93,35 +78,30 @@
 		}
 	}
 
-.home__nav {
-	background: #062D3F;
+.home nav {
 	display: flex;
 	font-size: $typeSmall;
 	font-weight: 500;
 	justify-content: center;
-	padding-bottom: $spaceBase*3;
-	padding-top: $spaceBase*4;
+	padding-bottom: $spaceBase*2;
+	padding-top: $spaceBase*2;
 	text-transform: uppercase;
-	@media (min-height: $minHeight) {
-		align-items: center;
-		display: flex;
-		height: 25vh;
-		justify-content: center;
-	    order: 1;
-	    padding-bottom: $spaceBase;
-	    padding-top: 0;
+	@media (min-width: $standardWidth) {
+		padding-top: ($spaceBase*3 +.1rem);
 	    }
 	@media (min-width: $mediumWidth) {
+		align-items: center;
 		height: 100vh;
-		padding-right: ($spaceBase*5 + .2rem);
+		order: 2;
+		padding-right: ($spaceBase*5 + .1rem);
 		width: 50vw;
 	    }
 	@media (min-width: $largeWidth) {
-		padding-right: ($spaceBase*7 + .4rem);
+		padding-right: ($spaceBase*7 + .1rem);
 	    }
 	}
 
-.home__nav a {
+.home nav a {
 	transition: all $transition;
 	&:hover, &:active, &:focus {
 		box-shadow: inset 0 -.2rem 0 $themeSecondaryColor;
@@ -132,60 +112,58 @@
 
 @media (min-width: $standardWidth) {
     .edge {
-	background: $whiteish;
-	position: fixed;
-	z-index: 9998;
-	}
+		background: $whiteish;
+		position: fixed;
+		z-index: 9998;
+		}
 
-.edge--top,
-.edge--bottom {
-	height: .1rem;
-	left: $spaceBase;
-	right: $spaceBase;
-	@media (min-width: $largeWidth) {
-	    height: .4rem;
-		left: $spaceBase*3;
-		right: $spaceBase*3;
-	    }
-	}
+	.edge--top,
+	.edge--bottom {
+		height: .1rem;
+		left: $spaceBase;
+		right: $spaceBase;
+		@media (min-width: $largeWidth) {
+			left: $spaceBase*3;
+			right: $spaceBase*3;
+		    }
+		}
 
-.edge--top {
-	top: $spaceBase;
-	@media (min-width: $largeWidth) {
-		top: $spaceBase*3;
-	    }
-	}
+	.edge--top {
+		top: $spaceBase;
+		@media (min-width: $largeWidth) {
+			top: $spaceBase*3;
+		    }
+		}
 
-.edge--bottom {
-	bottom: $spaceBase;
-	@media (min-width: $largeWidth) {
-		bottom: $spaceBase*3;
-	    }
-	}
+	.edge--bottom {
+		bottom: $spaceBase;
+		@media (min-width: $largeWidth) {
+			bottom: $spaceBase*3;
+		    }
+		}
 
-.edge--left,
-.edge--right {
-	bottom: $spaceBase;
-	top: $spaceBase;
-	width: .1rem;
-	@media (min-width: $largeWidth) {
-	    bottom: $spaceBase*3;
-		top: $spaceBase*3;
-		width: .4rem;
-	    }
-	}
+	.edge--left,
+	.edge--right {
+		bottom: $spaceBase;
+		top: $spaceBase;
+		width: .1rem;
+		@media (min-width: $largeWidth) {
+		    bottom: $spaceBase*3;
+			top: $spaceBase*3;
+		    }
+		}
 
-.edge--left {
-	left: $spaceBase;
-	@media (min-width: $largeWidth) {
-		left: $spaceBase*3;
-	    }
-	}
+	.edge--left {
+		left: $spaceBase;
+		@media (min-width: $largeWidth) {
+			left: $spaceBase*3;
+		    }
+		}
 
-.edge--right {
-	right: $spaceBase;
-	@media (min-width: $largeWidth) {
-		right: $spaceBase*3;
-	    }
-	}
+	.edge--right {
+		right: $spaceBase;
+		@media (min-width: $largeWidth) {
+			right: $spaceBase*3;
+		    }
+		}
     }
